--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "author": "Sune Simonsen",
   "license": "MIT",
   "dependencies": {
-    "chance": "^0.8.0"
+    "chance": "0.8.0"
   },
   "devDependencies": {
-    "istanbul": "^0.4.2",
-    "mocha": "^2.3.4",
-    "standard": "^5.4.1",
-    "unexpected": "^10.5.1"
+    "istanbul": "0.4.2",
+    "mocha": "2.3.4",
+    "standard": "5.4.1",
+    "unexpected": "10.5.1"
   }
 }
