--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "istanbul": "0.4.2",
+    "javascript-state-machine": "2.3.5",
     "mocha": "2.3.4",
     "standard": "5.4.1",
     "unexpected": "10.5.1",
