--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   "main": "lib/chance-generators.js",
   "scripts": {
     "coverage": "istanbul cover node_modules/.bin/_mocha",
+    "build": "babel --out-dir lib --quiet src",
+    "prepare": "npm run build",
     "lint": "standard",
     "test": "mocha ./documentation/**/*.md ./test/**/*.js && npm run lint",
     "generate-site": "generate-site --require ./bootstrap-unexpected-markdown.js",
     "update-examples": "generate-site --require ./bootstrap-unexpected-markdown.js --update-examples"
   },
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "chance": "1.0.1"
   },
   "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "es6-set": "0.1.5",
     "istanbul": "0.4.2",
     "javascript-state-machine": "2.3.5",
     "mocha": "2.3.4",
