--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "babel --out-dir lib --quiet src",
     "coverage": "istanbul cover node_modules/.bin/_mocha",
     "generate-site": "generate-site --require ./bootstrap-unexpected-markdown.js",
-    "lint": "standard",
+    "lint": "eslint src test",
     "lint-staged": "lint-staged",
     "prepare": "npm run build",
     "test": "mocha ./documentation/**/*.md ./test/**/*.js && npm run lint",
@@ -35,7 +35,6 @@
     "pre-commit": "1.2.2",
     "prettier": "1.10.1",
     "prettier-package-json": "1.4.0",
-    "standard": "5.4.1",
     "unexpected": "10.33.2",
     "unexpected-documentation-site-generator": "4.2.0",
     "unexpected-markdown": "1.6.1"
