--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "update-examples": "generate-site --require ./bootstrap-unexpected-markdown.js --update-examples"
   },
   "dependencies": {
-    "chance": "1.0.1"
+    "chance": "1.0.16"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
+    "babel-eslint": "8.2.1",
     "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
     "es6-set": "0.1.5",
     "eslint": "3.19.0",
     "eslint-config-pretty-standard": "0.2.2",
@@ -34,9 +36,11 @@
     "pre-commit": "1.2.2",
     "prettier": "1.10.1",
     "prettier-package-json": "1.4.0",
-    "unexpected": "10.33.2",
-    "unexpected-documentation-site-generator": "4.2.0",
-    "unexpected-markdown": "1.6.1"
+    "serve": "6.5.8",
+    "unexpected": "10.37.1",
+    "unexpected-documentation-site-generator": "4.6.1",
+    "unexpected-generator": "0.1.1",
+    "unexpected-markdown": "1.7.4"
   },
   "keywords": [
     "random",
