--- a/package.json
+++ b/package.json
@@ -25,28 +25,28 @@
     "chance": "1.0.16"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.2.1",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "es6-set": "0.1.5",
-    "eslint": "3.19.0",
-    "eslint-config-pretty-standard": "0.2.2",
-    "imocha": "0.3.0",
-    "istanbul": "0.4.2",
-    "javascript-state-machine": "2.3.5",
-    "lint-staged": "4.0.3",
-    "mocha": "3.5.3",
-    "offline-github-changelog": "1.2.0",
-    "pre-commit": "1.2.2",
-    "prettier": "1.10.1",
-    "prettier-package-json": "1.4.0",
-    "serve": "9.4.2",
-    "unexpected": "10.37.1",
-    "unexpected-documentation-site-generator": "4.6.1",
-    "unexpected-generator": "0.1.1",
-    "unexpected-markdown": "1.7.4"
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "es6-set": "^0.1.5",
+    "eslint": "^3.19.0",
+    "eslint-config-pretty-standard": "^0.2.2",
+    "imocha": "^0.3.0",
+    "istanbul": "^0.4.2",
+    "javascript-state-machine": "^2.3.5",
+    "lint-staged": "^4.0.3",
+    "mocha": "^3.5.3",
+    "offline-github-changelog": "^1.2.0",
+    "pre-commit": "^1.2.2",
+    "prettier": "~1.15.3",
+    "prettier-package-json": "^1.4.0",
+    "serve": "^9.4.2",
+    "unexpected": "^10.37.1",
+    "unexpected-documentation-site-generator": "^4.6.1",
+    "unexpected-generator": "^0.1.1",
+    "unexpected-markdown": "^1.7.4"
   },
   "keywords": [
     "random",
